<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
     <variable
         name="auth"
         type="com.example.medimok.views.activity.AuthActivity" />
    </data>
    <RelativeLayout
        android:id="@+id/relayHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_80sdp"
            app:lottie_fileName="animation_two.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_80sdp" />
        <LinearLayout
            android:layout_below="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_54sdp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_note"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/color_primary"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="@string/app_detail_one"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_detail_two"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:textStyle="normal"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_detail_three"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:textStyle="normal"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_44sdp"
            android:background="@drawable/rectangle_shape">
            <Button
                android:layout_width="@dimen/_160sdp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:backgroundTint="@color/color_primary"
                android:padding="@dimen/_6sdp"
                android:fontFamily="@font/poppinsregular"
                android:onClick="@{()->auth.signIn()}"
                />
            <Button
                android:layout_width="@dimen/_160sdp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="@dimen/_14sdp"
                android:backgroundTint="@color/color_secondary"
                android:textColor="@color/white"
                android:padding="@dimen/_6sdp"
                android:fontFamily="@font/poppinsregular"
                android:onClick="@{()->auth.signUp()}"
                />
        </LinearLayout>
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</layout>