<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
      <variable
          name="signIn"
          type="com.example.medimok.views.fragment.SignInFragment" />

        <variable
            name="singInModel"
            type="com.example.medimok.models.localmodel.SigInModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusableInTouchMode="true">
       <include
           android:id="@+id/toolbar"
           layout="@layout/toolbar_layout" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_64sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/_22sdp"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/color_primary"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proper_credentials"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_16sdp">

                <EditText
                    android:id="@+id/tvEmpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/employee_id"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_employee_id"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    android:text="@={singInModel.registerno}"
                    />
                <EditText
                    android:id="@+id/tvEmpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:text="@={singInModel.password}"
                    />
                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/rectangle_shape"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:fontFamily="@font/poppinssemibold"
                    android:onClick="@{(view)->signIn.submit()}"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    />
                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppinssemibold"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textColor="@color/color_primary"
                    android:onClick="@{()->signIn.newRegister()}"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>