<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectshape_white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/color_primary"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_16sdp">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:background="@drawable/rectangle_shape"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:inputType="text"
                android:drawableStart="@drawable/ic_user"
                android:drawableTint="@color/color_primary"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppinsregular"
                android:imeOptions="actionNext"
                android:maxLength="16"
                />
            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:background="@drawable/rectangle_shape"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:inputType="text"
                android:drawableStart="@drawable/ic_user"
                android:drawableTint="@color/color_primary"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppinsregular"
                android:imeOptions="actionNext"
                android:maxLength="16"
                />
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:background="@drawable/rectangle_shape"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/color_primary"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppinsregular"
                android:imeOptions="actionNext"
                />
            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:background="@drawable/rectangle_shape"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:inputType="number"
                android:drawableStart="@drawable/ic_phone"
                android:drawableTint="@color/color_primary"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppinsregular"
                android:imeOptions="actionDone"
                android:maxLength="10"
                />
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/rectangle_shape"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/poppinssemibold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>