<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
      <variable
          name="signUp"
          type="com.example.medimok.views.fragment.SignUpFragment" />
        <variable
            name="signUpModel"
            type="com.example.medimok.models.localmodel.SigUpModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:clickable="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <LinearLayout
            android:id="@+id/linearContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:layout_margin="@dimen/_14sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="@dimen/_22sdp"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/color_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proper_employee_details"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_16sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_shape"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="@dimen/_8sdp"
                        android:drawableTint="@color/color_primary"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textVisiblePassword"
                        android:maxLength="10"
                        android:padding="@dimen/_8sdp"
                        android:singleLine="true"
                        android:textSize="@dimen/_12sdp"
                        android:text="@={signUpModel.firstName}"
                        />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:background="@drawable/rectangle_shape"
                        android:padding="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:inputType="textVisiblePassword"
                        android:maxLength="10"
                        android:fontFamily="@font/poppinsregular"
                        android:imeOptions="actionNext"
                        android:text="@={signUpModel.lastName}"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:background="@drawable/rectangle_shape"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/_12sdp"
                        android:singleLine="true"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:drawableTint="@color/color_primary"
                        android:drawablePadding="@dimen/_10sdp"
                        />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:imeOptions="actionNext"
                    android:maxLength="24"
                    android:text="@={signUpModel.email}"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/phone"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    android:text="@={signUpModel.phone}"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/company_name"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="textVisiblePassword"
                    android:drawableStart="@drawable/ic_office"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:imeOptions="actionNext"
                    android:maxLength="24"
                    android:text="@={signUpModel.companyName}"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/employee_id"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_employee_id"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    android:text="@={signUpModel.employeeId}"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:background="@drawable/rectangle_shape"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/color_primary"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    android:text="@={signUpModel.password}"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_below="@+id/linearContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/rectangle_shape"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:fontFamily="@font/poppinssemibold"
            android:elevation="@dimen/_3sdp"
            android:onClick="@{()->signUp.onSubmit(signUpModel)}"
            />
    </RelativeLayout>
</layout>